update for dapphack

--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
 </head>
 
 <body>
+
+  <button id="submitBtn">Submit</button>
+  <textarea style="width: 260px; height: 33px;" cols="1" rows="1" id="submitText"></textarea>
+  <!-- <textarea style="width: 260px; height: 33px;" cols="1" rows="1" id="submitText"></textarea> -->
+  <!-- <textarea style="width: 260px; height: 33px;" cols="1" rows="1" id="submitText"></textarea> -->
+  <!-- <textarea style="width: 260px; height: 33px;" cols="1" rows="1" id="submitText"></textarea> -->
+
   <script src="./dash.min.js"></script>
   <script src="./index.js"></script>
 </body>
