--- a/src/Sign-in.html
+++ b/src/Sign-in.html
@@ -61,6 +61,7 @@
     <p class="mt-5 mb-3 text-muted">&nbsp;</p>
   </form>
   <script src="../assets/js/jquery-slim.min.js"></script>
+  <script src="../assets/js/dash.min.js"></script>
   <script src="./signin.js"></script>
 </body>
 
