update, cleanup, add gh-pages

--- a/src/PayMe.html
+++ b/src/PayMe.html
@@ -12,13 +12,13 @@
     <!-- <link rel="canonical" href="https://getbootstrap.com/docs/4.3/examples/starter-template/"> -->
 
     <!-- Bootstrap core CSS -->
-    <!-- <link href="../assets/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"> -->
-    <link href="../assets/css/bootstrap.min.css" rel="stylesheet">
+    <!-- <link href="./assets/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"> -->
+    <link href="./assets/css/bootstrap.min.css" rel="stylesheet">
 
 
     <style>
         body {
-            background-image: url("../assets/img/jonas-leupe-0IVop5v4MMU-unsplash.jpg");
+            background-image: url("./assets/img/jonas-leupe-0IVop5v4MMU-unsplash.jpg");
             background-repeat: no-repeat;
             background-size: cover;
         }
@@ -141,13 +141,13 @@
         </div>
 
     </main><!-- /.container -->
-    <!-- <script src="../assets/js/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script> -->
-    <script src="../assets/js/jquery-slim.min.js"></script>
+    <!-- <script src="./assets/js/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script> -->
+    <script src="./assets/js/jquery-slim.min.js"></script>
     <!-- <script>window.jQuery || document.write('<script src="/docs/4.3/assets/js/vendor/jquery-slim.min.js"><\/script>')</script><script src="/docs/4.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-xrRywqdh3PHs8keKZN+8zzc5TX0GRTLCcmivcbNJWm2rs5C8PRhcEn3czEjhAO9o" crossorigin="anonymous"></script></body> -->
-    <script>window.jQuery || document.write('<script src="../assets/js/jquery-slim.min.js"><\/script>')</script>
-    <!-- <script src="../assets/js/bootstrap.bundle.min.js" integrity="sha384-xrRywqdh3PHs8keKZN+8zzc5TX0GRTLCcmivcbNJWm2rs5C8PRhcEn3czEjhAO9o" crossorigin="anonymous"></script> -->
-    <script src="../assets/js/bootstrap.bundle.min.js"></script>
-    <script src="../assets/js/dash.min.js"></script>
+    <script>window.jQuery || document.write('<script src="./assets/js/jquery-slim.min.js"><\/script>')</script>
+    <!-- <script src="./assets/js/bootstrap.bundle.min.js" integrity="sha384-xrRywqdh3PHs8keKZN+8zzc5TX0GRTLCcmivcbNJWm2rs5C8PRhcEn3czEjhAO9o" crossorigin="anonymous"></script> -->
+    <script src="./assets/js/bootstrap.bundle.min.js"></script>
+    <script src="./assets/js/dash.min.js"></script>
     <script src="./payme-dapp.js"></script>
 </body>
 
