--- a/src/Sign-in.html
+++ b/src/Sign-in.html
@@ -12,8 +12,8 @@
   <!-- <link rel="canonical" href="https://getbootstrap.com/docs/4.3/examples/sign-inS/"> -->
 
   <!-- Bootstrap core CSS -->
-  <!-- <link href="../assets/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"> -->
-  <link href="../assets/css/bootstrap.min.css" rel="stylesheet">
+  <!-- <link href="./assets/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"> -->
+  <link href="./assets/css/bootstrap.min.css" rel="stylesheet">
 
 
   <style>
@@ -39,8 +39,8 @@
 <body class="text-center">
 
   <form class="form-signin">
-    <!-- <img class="mb-4" src="../assets/img/blue-d.svg" alt="" width="72" height="72"> -->
-    <img class="mb-4" src="../assets/img/dash-d-rounded-square.svg" alt="" width="72" height="72">
+    <!-- <img class="mb-4" src="./assets/img/blue-d.svg" alt="" width="72" height="72"> -->
+    <img class="mb-4" src="./assets/img/dash-d-rounded-square.svg" alt="" width="72" height="72">
     <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
     <label for="inputEmail" class="sr-only">Dash Username</label>
     <input type="email" id="inputUsername" class="form-control" placeholder="Dash Username" required autofocus>
@@ -60,8 +60,8 @@
     <!-- <p class="mt-5 mb-3 text-muted">&copy; readme 2020</p> -->
     <p class="mt-5 mb-3 text-muted">&nbsp;</p>
   </form>
-  <script src="../assets/js/jquery-slim.min.js"></script>
-  <script src="../assets/js/dash.min.js"></script>
+  <script src="./assets/js/jquery-slim.min.js"></script>
+  <script src="./assets/js/dash.min.js"></script>
   <script src="./signin.js"></script>
 </body>
 
