--- a/src/index.html
+++ b/src/index.html
@@ -12,8 +12,8 @@
   <!-- <link rel="canonical" href="https://getbootstrap.com/docs/4.3/examples/jumbotron/"> -->
 
   <!-- Bootstrap core CSS -->
-  <!-- <link href="../assets/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"> -->
-  <link href="../assets/css/bootstrap.min.css" rel="stylesheet">
+  <!-- <link href="./assets/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"> -->
+  <link href="./assets/css/bootstrap.min.css" rel="stylesheet">
 
 
   <style>
@@ -22,7 +22,7 @@
     }
 
     body {
-      background-image: url("../assets/img/isaac-benhesed-onLbXleIkds-unsplash.jpg");
+      background-image: url("./assets/img/isaac-benhesed-onLbXleIkds-unsplash.jpg");
       background-repeat: no-repeat;
       background-size: cover;
       background: rgb(255, 255, 255);
@@ -108,10 +108,10 @@
       <div class="container">
         <h1 class="display-3">Dash Platform Sample Dapp's</h1>
         <p>This is a collection of simple Dash Platform Dapp's to showcase how they can be implemented from third-party
-          developers. These samples use the "Simple Dapp Signing" algorithm used by <a
+          developers. These samples use the "Simple Dapp Signing" algorithm implemented by <a
             href="https://github.com/readme55/Dash-Chrome-Wallet" target="_blank">Chrome Wallet</a>. <b>This is not an official solution!</b><br><br>
           Checkout the <a href="https://github.com/readme55/" target="_blank">Dash Sample Dapp</a> GitHub repository to
-          learn how to develop your own Dapp using the same method then these samples.<br><br>
+          learn how to develop your own Dapp using the same method then these samples <a href="https://github.com/readme55/Sample-DashJS-Browser-Dapp/blob/master/src/note-dapp.js" target="_blank">i.e. note-dapp.js</a>.<br><br>
           Also follow <a href="https://github.com/dashevo/DashJS" target="_blank">Dash SDK</a> releases!<br>
         </p>
         <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
@@ -133,8 +133,8 @@
         </div>
         <div class="col-md-4">
           <h2>PayMe</h2>
-          <p>PayMe is meant as simple example to submit a payment requested from a website to Chrome Wallet.
-            It uses only your Dash Username and you simply have to "Confirm" it in the Wallet after submission.
+          <p>PayMe is a simple example to submit a payment requested from a website to Chrome Wallet.
+            It uses your Dash Username and you just have to "Confirm" the payment request in the Wallet after submission.
           </p>
           <p><a class="btn btn-secondary" href="./PayMe.html" role="button">Start &raquo;</a></p>
         </div>
@@ -154,12 +154,12 @@
   <footer class="container">
     <p>&copy; readme 2020</p>
   </footer>
-  <!-- <script src="../assets/js/jquery-slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script> -->
-  <script src="../assets/js/jquery-slim.min.js"></script>
+  <!-- <script src="./assets/js/jquery-slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script> -->
+  <script src="./assets/js/jquery-slim.min.js"></script>
   <!-- <script>window.jQuery || document.write('<script src="/docs/4.3/assets/js/vendor/jquery-slim.min.js"><\/script>')</script><script src="/docs/4.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-xrRywqdh3PHs8keKZN+8zzc5TX0GRTLCcmivcbNJWm2rs5C8PRhcEn3czEjhAO9o" crossorigin="anonymous"></script></body> -->
-  <script>window.jQuery || document.write('<script src="../assets/js/jquery-slim.min.js"><\/script>')</script>
-  <!-- <script src="../assets/js/bootstrap.bundle.min.js" integrity="sha384-xrRywqdh3PHs8keKZN+8zzc5TX0GRTLCcmivcbNJWm2rs5C8PRhcEn3czEjhAO9o" crossorigin="anonymous"></script> -->
-  <script src="../assets/js/bootstrap.bundle.min.js"></script>
+  <script>window.jQuery || document.write('<script src="./assets/js/jquery-slim.min.js"><\/script>')</script>
+  <!-- <script src="./assets/js/bootstrap.bundle.min.js" integrity="sha384-xrRywqdh3PHs8keKZN+8zzc5TX0GRTLCcmivcbNJWm2rs5C8PRhcEn3czEjhAO9o" crossorigin="anonymous"></script> -->
+  <script src="./assets/js/bootstrap.bundle.min.js"></script>
   <script src="./index.js"></script>
 </body>
 
