--- a/src/index.html
+++ b/src/index.html
@@ -55,7 +55,7 @@
 
 <body>
   <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-    <a class="navbar-brand" href="#">Dash Platform Sample Dapp's</a>
+    <a class="navbar-brand" href="#">Sample Dapps by readme</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault"
       aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
