--- a/src/PayMe.html
+++ b/src/PayMe.html
@@ -49,7 +49,7 @@
 
 <body>
     <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-        <a class="navbar-brand" href="#">Dash Platform Sample Dapp's</a>
+        <a class="navbar-brand" href="#">Sample Dapps by readme</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault"
             aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -95,18 +95,13 @@
             <h1>PayMe</h1>
             <p class="lead">Pay this Dapp by submitting a payment request to <a
                     href="https://github.com/readme55/Dash-Chrome-Wallet" target="_blank">Chrome Wallet</a>.<br>
-                <b>Steps:</b><br>
-                1. Activate the "Simple Dapp Signing" switch in Chrome Wallet<br>
-                2. Submit the payment here in the Browser Dapp<br>
-                3. Receive a confirmation dialog from Chrome Wallet.</p>
-
             <form>
                 <div class="form-group">
                     <br>
                     <!-- <label for="exampleFormControlDate1">Enter your Dash Username</label><br> -->
                     <div class="input-group mb-3">
                         <div class="input-group-prepend">
-                            <span class="input-group-text" id="inputGroup-sizing-lg">Dapp Address &nbsp;</span>
+                            <span class="input-group-text" id="inputGroup-sizing-lg">Receiving Address &nbsp;</span>
                         </div>
                         <input class="form-control form-control-lg" type="text" id="exampleFormControlUser" rows="1"
                             readonly=true><br>
