--- a/Note.html
+++ b/Note.html
@@ -49,7 +49,7 @@
 
 <body>
   <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-    <a class="navbar-brand" href="#">Dash Platform Sample Dapp's</a>
+    <a class="navbar-brand" href="#">Sample Dapps by readme</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault"
       aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -93,7 +93,7 @@
 
     <div class="starter-template">
       <h1>Note Dapp</h1>
-      <p class="lead">Create a note and save it on Dash Platform.<br> Optional encrypt the note with your Public Key.
+      <p class="lead">Create a note and save it on Dash Platform.<br> Optional encrypt the note with your Public Key (WIP).
       </p>
 
       <form>
