--- a/index.html
+++ b/index.html
@@ -112,7 +112,11 @@
             href="https://github.com/readme55/Dash-Chrome-Wallet" target="_blank">Chrome Wallet</a>. <b>This is not an official solution!</b><br><br>
           Checkout the <a href="https://github.com/readme55/" target="_blank">Dash Sample Dapp</a> GitHub repository to
           learn how to develop your own Dapp using the same method then these samples <a href="https://github.com/readme55/Sample-DashJS-Browser-Dapp/blob/master/src/note-dapp.js" target="_blank">i.e. note-dapp.js</a>.<br><br>
-          Also follow <a href="https://github.com/dashevo/DashJS" target="_blank">Dash SDK</a> releases!<br>
+          Also follow <a href="https://github.com/dashevo/DashJS" target="_blank">Dash SDK</a> releases!<br><br>
+          <b>Instructions:</b><br>
+                1. Activate the "Simple Dapp Signing" switch in Chrome Wallet<br>
+                2. Sign-In using the button in upper right corner, enter your registered Username (from Chrome Wallet) and press "Sign-in"<br>
+                3. Receive a confirmation dialog from Chrome Wallet and confirm it. You should now be logged in and ready to start a Dapp.
         </p>
         <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
       </div>
