--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
         <form action="./Sign-in.html">
           <!-- <button class="btn btn-success my-2 my-sm-0" type="submit">Sign in</button> -->
           <!-- <input type="button" onclick="location.href='https://google.com';" value="Go to Google" /> -->
-          <input id="signinbutton" class="btn btn-success my-2 my-sm-0" type="button" onclick="location.href='./Sign-in.html';"
-            value="Sign in">
+          <input id="signinbutton" class="btn btn-success my-2 my-sm-0" type="button"
+            onclick="location.href='./Sign-in.html';" value="Sign in">
         </form>
       </form>
     </div>
@@ -107,16 +107,20 @@
     <div class="jumbotron">
       <div class="container">
         <h1 class="display-3">Dash Platform Sample Dapp's</h1>
-        <p>This is a collection of simple Dash Platform Dapp's to showcase how they can be implemented from third-party
+        <p>This is a collection of simple <a href="https://dashplatform.readme.io/docs/introduction-what-is-dash-platform" target="_blank">Dash Platform</a> Dapp's to showcase how they can be implemented by third-party
           developers. These samples use the "Simple Dapp Signing" algorithm implemented by <a
-            href="https://github.com/readme55/Dash-Chrome-Wallet" target="_blank">Chrome Wallet</a>. <b>This is not an official solution!</b><br><br>
+            href="https://github.com/readme55/Dash-Chrome-Wallet" target="_blank">Chrome Wallet</a>. <b>This is not an
+            official solution!</b><br><br>
           Checkout the <a href="https://github.com/readme55/" target="_blank">Dash Sample Dapp</a> GitHub repository to
-          learn how to develop your own Dapp using the same method then these samples <a href="https://github.com/readme55/Sample-DashJS-Browser-Dapp/blob/master/src/note-dapp.js" target="_blank">i.e. note-dapp.js</a>.<br><br>
-          Also follow <a href="https://github.com/dashevo/DashJS" target="_blank">Dash SDK</a> releases!<br><br>
+          learn how to develop your own Dapp using the same method then these samples <a
+            href="https://github.com/readme55/Sample-DashJS-Browser-Dapp/blob/master/src/note-dapp.js"
+            target="_blank">i.e. note-dapp.js</a>.<br><br>
           <b>Instructions:</b><br>
-                1. Activate the "Simple Dapp Signing" switch in Chrome Wallet<br>
-                2. Sign-In using the button in upper right corner, enter your registered Username (from Chrome Wallet) and press "Sign-in"<br>
-                3. Receive a confirmation dialog from Chrome Wallet and confirm it. You should now be logged in and ready to start a Dapp.
+          1. Activate the "Simple Dapp Signing" switch in Chrome Wallet<br>
+          2. Sign-In using the button in upper right corner, enter your registered Username (from Chrome Wallet) and
+          press "Sign-in"<br>
+          3. Receive a confirmation dialog from Chrome Wallet and confirm it. You should now be logged in and ready to
+          start a Dapp.
         </p>
         <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
       </div>
@@ -138,7 +142,8 @@
         <div class="col-md-4">
           <h2>PayMe</h2>
           <p>PayMe is a simple example to submit a payment requested from a website to Chrome Wallet.
-            It uses your Dash Username and you just have to "Confirm" the payment request in the Wallet after submission.
+            It uses your Dash Username and you just have to "Confirm" the payment request in the Wallet after
+            submission.
           </p>
           <p><a class="btn btn-secondary" href="./PayMe.html" role="button">Start &raquo;</a></p>
         </div>
