--- a/src/index.html
+++ b/src/index.html
@@ -22,9 +22,10 @@
     }
 
     body {
-      background-image: url("./assets/img/isaac-benhesed-onLbXleIkds-unsplash.jpg");
+      /* background-image: url("./assets/img/dash-d-rounded-square.svg");
       background-repeat: no-repeat;
-      background-size: cover;
+      background-size: auto;
+      background-position: center; */
       background: rgb(255, 255, 255);
 
     }
@@ -114,7 +115,7 @@
           Checkout the <a href="https://github.com/readme55/" target="_blank">Dash Sample Dapp</a> GitHub repository to
           learn how to develop your own Dapp using the same method then these samples <a
             href="https://github.com/readme55/Sample-DashJS-Browser-Dapp/blob/master/src/note-dapp.js"
-            target="_blank">i.e. note-dapp.js</a>.<br><br>
+            target="_blank">e.g. note-dapp.js</a>.<br><br>
           <b>Instructions:</b><br>
           1. Activate the "Simple Dapp Signing" switch in Chrome Wallet<br>
           2. Sign-In using the button in upper right corner, enter your registered Username (from Chrome Wallet) and
