--- a/Note.html
+++ b/Note.html
@@ -93,7 +93,7 @@
 
     <div class="starter-template">
       <h1>Note Dapp</h1>
-      <p class="lead">Create a note and save it on Dash Platform.<br> Optional encrypt the note with your Public Key (WIP).
+      <p class="lead">Create a note and save it on Dash Platform Note Data-Contract.<br> Optional encrypt the note with your Public Key (WIP).
       </p>
 
       <form>
