--- a/src/index.html
+++ b/src/index.html
@@ -162,7 +162,7 @@
   </main>
 
   <footer class="container">
-    <p>&copy; readme 2020</p>
+    <p>&copy; readme 2020 -- Support my work: XgQpScGHiEWFXxFiJuEKSY2VVpumaTUMkN</p>
   </footer>
   <!-- <script src="./assets/js/jquery-slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script> -->
   <script src="./assets/js/jquery-slim.min.js"></script>
