--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             target="_blank">e.g. note-dapp.js</a>.<br><br>
           <b>Instructions:</b><br>
           1. Activate the "Simple Dapp Signing" switch in Chrome Wallet<br>
-          2. Sign-In using the button in upper right corner, enter your registered Username (from Chrome Wallet) and
+          2. On this website Sign-In using the button in upper right corner, enter your registered Username (from Chrome Wallet) and
           press "Sign-in"<br>
           3. Receive a confirmation dialog from Chrome Wallet and confirm it. You should now be logged in and ready to
           start a Dapp.
@@ -162,7 +162,7 @@
   </main>
 
   <footer class="container">
-    <p>&copy; readme 2020 -- Support my work: XgQpScGHiEWFXxFiJuEKSY2VVpumaTUMkN</p>
+    <p>&copy; readme 2020</p>
   </footer>
   <!-- <script src="./assets/js/jquery-slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script> -->
   <script src="./assets/js/jquery-slim.min.js"></script>
