--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
           developers. These samples use the "Simple Dapp Signing" algorithm implemented by <a
             href="https://github.com/readme55/Dash-Chrome-Wallet" target="_blank">Chrome Wallet</a>. <b>This is not an
             official solution!</b><br><br>
-          Checkout the <a href="https://github.com/readme55/" target="_blank">Dash Sample Dapp</a> GitHub repository to
+          Checkout the <a href="https://github.com/readme55/sample-dapps" target="_blank">Dash Sample Dapps</a> GitHub repository to
           learn how to develop your own Dapp using the same method then these samples <a
             href="https://github.com/readme55/sample-dapps/blob/master/src/note-dapp.js"
             target="_blank">e.g. note-dapp.js</a>.<br><br>
