--- a/src/index.html
+++ b/src/index.html
@@ -127,14 +127,14 @@
         <h1 class="display-3">Dash Platform Sample Dapps</h1>
         <p>This is a collection of simple <a href="https://dashplatform.readme.io/docs/introduction-what-is-dash-platform" target="_blank">Dash Platform</a> Dapps to showcase how they can be implemented by third-party
           developers. These samples use the "Simple Dapp Signing" algorithm implemented by <a
-            href="https://github.com/readme55/Dash-Chrome-Wallet" target="_blank">Chrome Wallet</a>. <b>This is not an
-            official solution!</b><br><br>
+            href="https://github.com/readme55/Dash-Chrome-Wallet" target="_blank">Chrome Wallet</a>.
+            <br><br>
           Checkout the <a href="https://github.com/readme55/sample-dapps" target="_blank">Dash Sample Dapps</a> GitHub repository to
-          learn how to develop your own Dapp using the same method then these samples <a
+          learn how to develop your own Dapp using the same method then these samples e.g. <a
             href="https://github.com/readme55/sample-dapps/blob/master/src/note-dapp.js"
-            target="_blank">e.g. note-dapp.js</a>.<br><br>
+            target="_blank">note-dapp.js</a>.<br><br>
           <b>Instructions:</b><br>
-          1. Activate the "Simple Dapp Signing" switch in Chrome Wallet<br>
+          1. Activate "Push Notifications" switch in Chrome Wallet<br>
           2. On this website Sign-In using the button in upper right corner, enter your registered Username (from Chrome Wallet) and
           press "Sign-in"<br>
           3. Receive a confirmation dialog from Chrome Wallet and confirm it. You should now be logged in and ready to
