--- a/index.html
+++ b/index.html
@@ -167,7 +167,8 @@
         </div>
         <div class="col-md-4">
           <h2>Pet Shop</h2>
-          <p>Pet Shop is a Dash Platform port of the famous Ethereum Dapp example.</p>
+          <p><b>- Not implemented -</b></p>
+          <p>Pet Shop is a Dash Platform port of the famous Ethereum Truffle Dapp example.</p>
           <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
         </div>
       </div>
