add localforage and move old code to /v1

--- a/src/PayMe.html
+++ b/src/PayMe.html
@@ -143,6 +143,7 @@
     <!-- <script src="./assets/js/bootstrap.bundle.min.js" integrity="sha384-xrRywqdh3PHs8keKZN+8zzc5TX0GRTLCcmivcbNJWm2rs5C8PRhcEn3czEjhAO9o" crossorigin="anonymous"></script> -->
     <script src="./assets/js/bootstrap.bundle.min.js"></script>
     <script src="./assets/js/dash.min.js"></script>
+    <script src="./assets/js/localforage.js"></script>
     <script src="./credentials.js"></script>
     <script src="./payme-dapp.js"></script>
 </body>
