update to v19.4 (new credentials, contracts, localforagewrapper)

--- a/src/Note.html
+++ b/src/Note.html
@@ -140,6 +140,7 @@
   <script src="./assets/js/bootstrap.bundle.min.js"></script>
   <script src="./assets/js/dash.min.js"></script>
   <script src="./assets/js/localforage.js"></script>
+  <script src="./LocalForageWrapper.js"></script>
   <script src="./credentials.js"></script>
   <script src="./note-dapp.js"></script>
 </body>
