--- a/src/Sign-in.html
+++ b/src/Sign-in.html
@@ -63,6 +63,7 @@
   <script src="./assets/js/jquery-slim.min.js"></script>
   <script src="./assets/js/dash.min.js"></script>
   <script src="./assets/js/localforage.js"></script>
+  <script src="./LocalForageWrapper.js"></script>
   <script src="./credentials.js"></script>
   <script src="./signin.js"></script>
 </body>
