--- a/PayMe.html
+++ b/PayMe.html
@@ -116,7 +116,7 @@
                         <input type="text" class="form-control form-control-lg" aria-label="Amount" value="1.0"
                             id="exampleFormControlAmount">
                         <div class="input-group-append">
-                            <span class="input-group-text" id="inputGroup-sizing-lg">eDash</span>
+                            <span class="input-group-text" id="inputGroup-sizing-lg">tDash</span>
                         </div>
                     </div>
 
@@ -143,6 +143,8 @@
     <!-- <script src="./assets/js/bootstrap.bundle.min.js" integrity="sha384-xrRywqdh3PHs8keKZN+8zzc5TX0GRTLCcmivcbNJWm2rs5C8PRhcEn3czEjhAO9o" crossorigin="anonymous"></script> -->
     <script src="./assets/js/bootstrap.bundle.min.js"></script>
     <script src="./assets/js/dash.min.js"></script>
+    <script src="./assets/js/localforage.js"></script>
+    <script src="./LocalForageWrapper.js"></script>
     <script src="./credentials.js"></script>
     <script src="./payme-dapp.js"></script>
 </body>
