--- a/v1/index.html
+++ b/v1/index.html
@@ -16,6 +16,9 @@
   <!-- <textarea style="width: 260px; height: 33px;" cols="1" rows="1" id="submitText"></textarea> -->
 
   <script src="./../assets/js/dash.min.js"></script>
+  <script src="./../assets/js/localforage.js"></script>
+  <script src="./../credentials.js"></script>
   <script src="./index.js"></script>
+  
 </body>
 </html>
